Added sorting by email

--- a/form-exercise-server/src/main/resources/templates/listStudents.html
+++ b/form-exercise-server/src/main/resources/templates/listStudents.html
@@ -1,13 +1,13 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="pl">
 <head>
-  <title>Users</title>
+  <title>Uczniowie</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 </head>
 <body>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1> Students </h1>
+      <h1> Uczniowie </h1>
     </div>
   </div>
   <div class="row" th:each="student : ${students}">
@@ -16,7 +16,9 @@
     <div class="col-md-3"><span th:text="${student.surname}"> Surname </span></div>
     <div class="col-md-2"><span th:text="${student.proposedNote}"> Proposed note </span></div>
     <div class="col-md-1">
+      <!--
       <a class="btn btn-danger" href="#" th:href="@{/delete/{email}(email=${student.email})}">Delete</a>
+      -->
     </div>
   </div>
 </div>
